MDEV-30677: Incorrect result for "SELECT JSON_SCHEMA_VALID('{}', NULL)"

Analysis: null_value is not set if any one of the arguments is NULL. So it
returns 1.
Fix: when either argument is NULL, set null_value to true, so that null can
be returned